# phantomx_arm_ros

phantomx_arm_bringup/: CMakeLists.txt  package.xml
phantomx_arm_bringup/config/: 55-dynamixel-bus.rules
phantomx_arm_bringup/launch/: pincher.launch
phantomx_arm_control/: CMakeLists.txt  package.xml
phantomx_arm_control/config/: pincher.yaml
phantomx_arm_control/config/pincher/: controller.yaml
phantomx_arm_control/launch/: pincher.launch
phantomx_arm_controller/: CMakeLists.txt  package.xml
phantomx_arm_controller/config/pincher/: controller.yaml  controller_v2.yaml  dynamixel_controller.yaml  operator.yaml
phantomx_arm_controller/launch/: pincher.launch  pincher_v2.launch
phantomx_arm_controller/script/: dynamixel_gripper_controller.py  dynamixel_joint_state_publisher.py
phantomx_arm_description/: CMakeLists.txt  package.xml
phantomx_arm_description/launch/: view_model.launch
phantomx_arm_description/urdf/: pincher.urdf.xacro  pincher_robot.urdf.xacro
phantomx_arm_description/urdf/pincher/: pincher.urdf.xacro  robot_parameters.xacro
phantomx_arm_description/viz/: model.rviz
phantomx_arm_moveit_config/phantomx_pincher_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
phantomx_arm_moveit_config/phantomx_pincher_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  phantomx_pincher_arm_robot.srdf  ros_controllers.yaml
phantomx_arm_ros/: CMakeLists.txt  package.xml
phantomx_arm_viz/: CMakeLists.txt  package.xml
phantomx_arm_viz/launch/: display.launch
phantomx_arm_viz/viz/: view.rviz
(+19 files in other folders)
