<package>
  <name>phantomx_arm_ros</name>
  <version>1.1.0</version>
  <author>Jhonyfer Angarita Moreno</author>
  <description>
    The phantomx_arm_ros meta package contains multiple packages to use PhantomX arm series.
  </description>
  <license>BSD</license>
  <maintainer email="jhnagaritamo@unal.edu.co">Jhonyfer Angarita Moreno</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>phantomx_description</run_depend>
  <run_depend>phantomx_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
