<package>
  <name>phantomx_arm_ros</name>
  <version>1.1.0</version>
  <author>Ye Tian</author>
  <description>
    The phantomx_arm_ros meta package contains multiple packages to use PhantomX arm series.
  </description>

  <license>MIT</license>
  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>phantomx_arm_viz</run_depend>
  <run_depend>phantomx_arm_bringup</run_depend>
  <run_depend>phantomx_arm_controller</run_depend>
  <run_depend>phantomx_arm_description</run_depend>
  <run_depend>phantomx_pincher_moveit_config</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
